--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #utils
-/src/firebase.js
+# /src/firebase.js
 
 # dependencies
 /node_modules
