--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^9.2.0",
     "react": "^17.0.2",
+    "react-datetime-picker": "^3.4.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.0",
     "react-router-dom": "^6.0.1",
