--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^12.1.10",
     "dayjs": "1.10.7",
     "firebase": "9.4.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-datetime-picker": "^3.4.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
