--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datetime-picker": "^3.4.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
